--- a/www/index.html
+++ b/www/index.html
@@ -29,46 +29,43 @@
 
  <div data-role="panel" data-position="left" data-position-fixed="true"
      data-display="overlay" data-theme="a" id="nav-panel">
-		<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow
-            ui-icon-delete ui-btn-icon-notext"></a>
-
+		<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-left">Close</a>
+        <br>
 			<ol data-role="listview" data-inset="true" >
 				<li><a href="#leccion1">Dios</a></li>
 				<li><a href="#leccion2">La Biblia</a></li>
-				<li><a href="#navbar">La Oración</a></li>
-				<li><a href="#">La segunda venida</a></li>
-				<li><a href="#">Señales de la segunda venida</a></li>
-				<li><a href="#">Origen del pecado</a></li>
-				<li><a href="#">La salvación</a></li>
-				<li><a href="#">El perdon de los pecados</a></li>
-				<li><a href="#">El juicio</a></li>
-				<li><a href="#">La ley de Dios</a></li>
-				<li><a href="#">El dia de reposo</a></li>
-				<li><a href="#">Como guardar el sabado</a></li>
-				<li><a href="#">La muerte</a></li>
-				<li><a href="#">La iglesia</a></li>
-				<li><a href="#">Don de profeciá</a></li>
-				<li><a href="#">Normas Cristianas</a></li>
-				<li><a href="">El Bautismo</a></li>
-				<li><a href="">La predicación</a></li>
-				<li><a href="">La vida Cristiana</a></li>
-				<li><a href="">Dios llama</a></li>
+				<li><a href="#leccion3">La Oración</a></li>
+				<li><a href="#leccion4">La segunda venida</a></li>
+				<li><a href="#leccion5">Señales de la segunda venida</a></li>
+				<li><a href="#leccion6">Origen del pecado</a></li>
+				<li><a href="#leccion7">La salvación</a></li>
+				<li><a href="#leccion8">El perdon de los pecados</a></li>
+				<li><a href="#leccion9">El juicio</a></li>
+				<li><a href="#leccion10">La ley de Dios</a></li>
+				<li><a href="#leccion11">El dia de reposo</a></li>
+				<li><a href="#leccion12">Como guardar el sabado</a></li>
+				<li><a href="#leccion13">La muerte</a></li>
+				<li><a href="#leccion14">La iglesia</a></li>
+				<li><a href="#leccion15">Don de profeciá</a></li>
+				<li><a href="#leccion16">Normas Cristianas</a></li>
+				<li><a href="#leccion17">El Bautismo</a></li>
+				<li><a href="#leccion18">La predicación</a></li>
+				<li><a href="#leccion19">La vida Cristiana</a></li>
+				<li><a href="#leccion20">Dios llama</a></li>
 			</ol>
         <br>
     </div><!-- /panel -->
 
- <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
-		<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow
-            ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+ <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="" id="add-form">
+		<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
         <br>
         <br>
-<ul data-role="listview">
+        <ul data-role="" data-inset="true">
                 <li><a href="#panel-fixed-page2">Accordion</a></li>
-                <li><a href="#panel-fixed-page2">Ajax Navigation</a></li>
-                <li><a href="#panel-fixed-page2">Autocomplete</a></li>
+                <li><a href="#panel-fixed-page2">Accordion</a></li>
         </ul>
     </div><!-- /panel -->
-	</div><!-- /content -->
+  </div><!-- /content -->
 
 	<footer data-role="footer" data-position="fixed">
 		<h4>Page Footer</h4>
@@ -167,7 +164,6 @@
 		    <input type="checkbox" name="checkbox-v-6c" id="checkbox-v-6c">
 		    <label for="checkbox-v-6c">Poner a Dios en primer lugar</label>
 
-
 			<div align="right"><a class="btny" href="#popup4"
                     data-transition="flip" data-rel="popup">(S. Mateo 22:37)</a></div>	
 			<div data-role="popup" id="popup4" class="ui-content" style="max-width:280px">
@@ -182,10 +178,8 @@
             <p align="center">
 		<a id="lec1-rpts-m"  class="ui-btn ui-corner-all ui-shadow ui-icon-eye ui-btn-icon-right ui-btn-icon-notext"></a>
             </p>
-		<!-- <a href="#" id="lec1-rpts-m"   class="ui-btn ui-corner-all ui-shadow ui-icon-eye ui-btn-icon-right" >Revelar Respuetas</a> -->
         </div>
     </div><!-- /content -->
-
 	<footer data-role="footer" data-position="fixed">
 		<h4>Page Footer</h4>
 	</footer><!-- /footer -->
