--- a/www/index.html
+++ b/www/index.html
@@ -172,7 +172,7 @@
                     data-transition="flip" data-rel="popup">(S. Mateo 22:37)</a></div>	
 			<div data-role="popup" id="popup4" class="ui-content" style="max-width:280px">
 			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>Jesús respondio: "Amaras al Señor tu Dios con todo tu corazón, con toda tu alma y con toda tu mente".</p>
+			<>Jesús respondio: "Amaras al Señor tu Dios con todo tu corazón, con toda tu alma y con toda tu mente".</p>
 			</div>
  		    <input type="checkbox" name="checkbox-v-6d" id="checkbox-v-6d">
 		    <label for="checkbox-v-6d">Amar a Dios de todo corazón</label>
@@ -184,6 +184,7 @@
             </p>
 		<!-- <a href="#" id="lec1-rpts-m"   class="ui-btn ui-corner-all ui-shadow ui-icon-eye ui-btn-icon-right" >Revelar Respuetas</a> -->
         </div>
+        poner la ilustard
     </div><!-- /content -->
 
 	<footer data-role="footer" data-position="fixed">
@@ -327,25 +328,8 @@
 	</footer><!-- /footer -->
 </div><!-- /page -->
 <!-- /page -->
-<!-- /page -->
 
 
-<!-- Start of third page -->
-<div data-role="page" id="navbar">
-
-	<div data-role="header">
-		<h1>La fe de Jesús</h1>
-		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
-		<a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-icon-left ui-icon-gear ui-btn-icon-notext">Settings</a>
-	</div><!-- /header -->
-
-	<div role="main" class="ui-content">
-	</div><!-- /content -->
-
-	<div data-role="footer">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
-</div><!-- /page -->
 
 </body>
 </html>
