--- a/www/index.html
+++ b/www/index.html
@@ -6,81 +6,79 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
 	<link rel="stylesheet" href="css/jquery.mobile.theme-1.4.5.min.css">
-    <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
     <!-- <link href="css/index.css" rel="stylesheet"> -->
-    <link href="spec/lib/jasmine-1.2.0/jasmine.css" rel="stylesheet">
+  <link href="spec/lib/jasmine-1.2.0/jasmine.css" rel="stylesheet">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
-	<script src="js/index.js"></script>
-    <script src="js/app.js"></script>
+  <!-- <script src="js/index.js"></script> -->
+  <script src="js/lafe-json.js"></script>
+	<script src="js/accions.js"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
 
-<!-- Start of first page -->
+<!--*********************** Page 0 ***********************-->
 <div data-role="page" class="CoverImage FlexEmbed FlexEmbed--2by0 " id="foo"
     style="background-image:url(img/lafedejesus.jpg);">
 	<header data-role="header" data-position="fixed">
-        <h1> <strong>La fe de Jesús</strong></h1>
-        <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
-        <a href="#add-form" data-icon="gear" data-iconpos="notext" >Add</a>
+    <h1> <strong>La fe de Jesús</strong></h1>
+    <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+    <a href="#add-form" data-icon="gear" data-iconpos="notext" >Add</a>
 	</header><!-- /header -->
-	<div role="main" class="ui-content">
-<p class="titulo" align="center">La fe de Jesus</p>
- <div data-role="panel" data-position="left" data-position-fixed="true"
-     data-display="overlay" data-theme="a" id="nav-panel">
-		<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-left">Close</a>
-        <br>
-			<ol data-role="listview" data-inset="true" >
-				<li><a href="#leccion1">Dios</a></li>
-				<li><a href="#leccion2">La Biblia</a></li>
-				<li><a href="#leccion3">La Oración</a></li>
-				<li><a href="#leccion4">Origen del pecado</a></li>
-				<li><a href="#leccion5">La salvación</a></li>
-				<li><a href="#leccion6">Perdon de los pecados</a></li>
-				<li><a href="#leccion7">La segunda venida de Jesus</a></li>
-				<li><a href="#leccion8">Señales de la segunda venida</a></li>
-				<li><a href="#leccion9">La santa ley de Dios</a></li>
-				<li><a href="#leccion10">El dia de reposo</a></li>
-				<li><a href="#leccion11">Como guardar el sábado</a></li>
-				<li><a href="#leccion12">Plan de Dios para la iglesia</a></li>
-				<li><a href="#leccion13">El bautizmo</a></li>
-				<li><a href="#leccion14">La muerte</a></li>
-				<li><a href="#leccion15">El juicio</a></li>
-				<li><a href="#leccion16">La iglesia</a></li>
-                <li><a href="#leccion17">Don de profecía</a></li>
-				<li><a href="#leccion18">Normas Cristianas</a></li>
-				<li><a href="#leccion19">La vida Cristiana</a></li>
-				<li><a href="#leccion20">Dios nos llama</a></li>
-			</ol>
-        <br>
+  <div role="main" class="ui-content">
+    <p class="titulo" align="center">La fe de Jesús</p>
+    <div data-role="panel" data-position="left" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
+  	  <a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-left">Close</a><br>
+  		<ol data-role="listview" data-inset="true" >
+  			<li><a onclick="listar(1)" href="#leccion1">Dios</a></li>
+        <li><a onclick="listar(2)" href="#leccion2">La Biblia</a></li>
+  			<!-- <li><a href="#leccion2">La Biblia</a></li> -->
+  			<li><a onclick="listar(3)" href="#leccion3">La Oración</a></li>
+  			<li><a href="#leccion4">Origen del pecado</a></li>
+  			<li><a href="#leccion5">La salvación</a></li>
+  			<li><a href="#leccion6">Perdon de los pecados</a></li>
+  			<li><a href="#leccion7">La segunda venida de Jesus</a></li>
+  			<li><a href="#leccion8">Señales de la segunda venida</a></li>
+  			<li><a href="#leccion9">La santa ley de Dios</a></li>
+  			<li><a href="#leccion10">El dia de reposo</a></li>
+  			<li><a href="#leccion11">Como guardar el sábado</a></li>
+  			<li><a href="#leccion12">Plan de Dios para la iglesia</a></li>
+  			<li><a href="#leccion13">El bautizmo</a></li>
+  			<li><a href="#leccion14">La muerte</a></li>
+  			<li><a href="#leccion15">El juicio</a></li>
+  			<li><a href="#leccion16">La iglesia</a></li>
+        <li><a href="#leccion17">Don de profecía</a></li>
+  			<li><a href="#leccion18">Normas Cristianas</a></li>
+  			<li><a href="#leccion19">La vida Cristiana</a></li>
+  			<li><a href="#leccion20">Dios nos llama</a></li>
+  		</ol>
+      <br>
     </div><!-- /panel -->
-
- <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="" id="add-form">
-		<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-        <br>
-        <br>
-        <ul data-role="" data-inset="true">
-                <li><a href="#panel-fixed-page2">Accordion</a></li>
-                <li><a href="#panel-fixed-page2">Accordion</a></li>
-        </ul>
-    </div><!-- /panel -->
+    <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="" id="add-form">
+    	<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a><br><br>
+      <ul data-role="" data-inset="true">
+        <li><a href="#panel-fixed-page2">Accordion</a></li>
+        <li><a href="#panel-fixed-page2">Accordion</a></li>
+      </ul>
+    </div><!-- /panel -->
   </div><!-- /content -->
-
 	<footer data-role="footer" data-position="fixed">
-		<h4>Page Footer</h4>
+		<h4>By-HappySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
+<!--*********************** Page 1 ***********************-->
 
 <div data-role="page" id="leccion1">
-	<header data-role="header" data-position="fixed">
-		<h2>DIOS<small>, y la Biblia </small></h2>
+  <header data-role="header" data-position="fixed">
+    <h1><strong>DIOS<small>, y la Biblia </small></strong></h1>
 		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
-	</header><!-- /header -->
+    <button onclick="guardar()" class="ui-btn ui-corner-all ui-icon-check ui-btn-icon-right ui-btn-icon-notext">Save</button>
+  </header><!-- /header -->
 
 	<div role="main" class="ui-content">
 		<ol>
-            <li><strong>¿Cuántos dioses existen?</strong> 
-                <a href="#" class="lec1-vers-m"><span >(Efesios 4:6)</span></a> </li>
+      <li><strong>¿Cuántos dioses existen?</strong><a href="#" class="lec1-vers-m"><span >(Efesios 4:6)</span></a> </li>
 			<div class="lec1-vers">				
                 <a href="#">(Efesios 4:6)</a>
 			<p> "Un Dios y Padre de todos, el cual es sobre todos, y por todos, y en todos".</p>
@@ -180,149 +178,30 @@
         </div>
     </div><!-- /content -->
 	<footer data-role="footer" data-position="fixed">
-		<h4>Page Footer</h4>
+		<h4>By-HappySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
-<!-- /page -->
 
+<!--*********************** Page 2 ***********************-->
 <div data-role="page" id="leccion2"><!--page-lec2-->
-	<header data-role="header" data-position="fixed">
-		<h2>La Santa Biblia </h2>
-		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
-	</header><!-- /header -->
-
-	<div role="main" class="ui-content">
-       
-		<ol>
-        <h4 align="center">Revelada por <strong>Dios </strong></h4>
-            <li><strong>¿Quién rebelo la santa escritura?</strong> 
-                <a href="#" class="lec2-vers-m"><span > (2 Timoteo 3:16)</span></a> </li>
-			<div class="lec2-vers">				
-                <a href="#"> (2 Timoteo 3:16)</a>
-			<p> "Toda la Escritura es inspirada por Dios, y útil para enseñar,
-                para redargüir, para corregir, para instruir en justicia".</p>
-			</div>
-			<p><input type="text" class="lec2-inputs"></p>
-            <p class="lec2-rpts info">
-			<strong>Respuesta: </strong>Fue inspirado por Dios.</p>
-
-			<li><strong>¿Quienes recibieron la revelación?</strong> <a href="#">(Hebreos 1:1)</a> </li>
-			<p class="lec2-vers"> "Dios, habiendo hablado muchas veces y de
-                muchas maneras en otro tiempo a los padres por los profetas". </p>
-			<p><input type="text" class="lec2-inputs"></p>
-			<p class="lec2-rpts info"><strong>Respuesta: </strong>Los profetas</p>
-
-            <h4 align="center">Fuente de orientación y soluciones</h4>
-            <li><strong>¿A qué se comprara la santa biblia?</strong> 
-                <a href="#" >(Salmo 119:105)</a></li>
-			<p class="lec2-vers">"Lámpara es a mis pies tu palabra, y lumbrera a
-                mi camino". </p>
-			<p><input type="text" class="lec2-inputs"></p>
-			<p class="lec2-rpts info"><strong>Respuesta:</strong> A una lámpara.</p>
-
-            <li><strong> ¿Qué beneficio reporta leer la santa biblia?</strong>
-                <a href="#" >(2 Timoteo3:15-17)</a></li>
-            <div class="lec2-vers">
-			<p>15 "Y que desde la niñez has sabido las Sagradas Escrituras, las
-                cuales te pueden hacer sabio para la salvación por la fe que es
-                en Cristo Jesús". </p>
-            <p>16 Toda la Escritura es inspirada por Dios, y útil para enseñar, para 
-                redargüir, para corregir, para instruir en justicia,</p>
-            <p>17 a fin de que el hombre de Dios sea perfecto, enteramente
-                preparado para toda buena obra.</p>
-            </div>
-			<p><input type="text" class="lec2-inputs"></p>
-			<p class="lec2-rpts info"><strong>Respuesta:</strong> Sabiduria.</p>
-
-            <li><strong>¿Que beneficios da, la santa biblia?</strong>
-                <a href="#">(Romanos 15:4)</a></li>
-            <div class="lec2-vers">
-			<p>"Porque las cosas que se escribieron antes, para nuestra
-                enseñanza se escribieron, a fin de que por la paciencia y la
-                consolación de las Escrituras, tengamos esperanza."</p>
-            </div>
-			<p><input type="text" class="lec2-inputs"></p>
-			<p class="lec2-rpts info"><strong>Respuesta:</strong> Esperanza.</p>
-
-            <li><strong>¿Cuánto tiempo perdurara la santa biblia?</strong>
-                <a href="#">(Isaías 40:8)</a></li>
-			<p class="lec2-vers">"Secase la hierba, marchitase la flor; más la
-                palabra del Dios nuestro permanece para siempre".</p>
-			<p><input type="text" class="lec2-inputs"></p>
-			<p class="lec2-rpts info"><strong>Respuesta:</strong> Para siempre.</p>
-		</ol>
-
-        <h4 align="center">
-            ¿QUÉ DEBO HACER?
-            <p align="center">
-		<a id="lec2-comp-m"  class="ui-btn ui-corner-all ui-shadow ui-icon-mail ui-btn-icon-right ui-btn-icon-notext"></a>
-            </p>
-        </h4>
-        <div id="lec2-comp">
-		<form>
-		<fieldset data-role="controlgroup" data-mini="true">	
-			<div align="right"><a class="btny"  href="#deu1719"
-            data-transition="flip" data-rel="popup">(Deuteronomio 17:19)</a></div>		
-			<div data-role="popup" id="deu1719" class="ui-content"
-                style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>y lo tendrá consigo, y leerá en él todos los días de su vida,
-                para que aprenda a temer a Jehová su Dios, para guardar todas las 
-                palabras de esta ley y estos estatutos, para ponerlos por obra;</p>
-			</div>
-		    <input type="checkbox" name="checkbox-v-2a" id="checkbox-v-2a">
-		    <label for="checkbox-v-2a">Aceptarla con gozo y alegría</label>			
-
-			<div align="right"><a class="btny"  href="#jn539"
-                    data-transition="flip" data-rel="popup">( s. juan 5:39)</a></div>	
-			<div data-role="popup" id="jn539" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p> Escudriñad las Escrituras; porque a vosotros os parece que en
-                ellas tenéis la vida eterna; y ellas son las que dan testimonio de mí;</p>
-			</div>
-		    <input type="checkbox" name="checkbox-v-2b" id="checkbox-v-2b">
-		    <label for="checkbox-v-2b"> Escudriñar asiduamente la Biblia</label>
-
-			<div align="right"><a class="btny" href="#jer1516"
-                    data-transition="flip" data-rel="popup">(jeremías 15:16)</a></div>	
-			<div data-role="popup" id="jer1516" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all
-                ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-            <p>"Fueron halladas tus palabras, y yo las comí; y tu palabra me fue por gozo y 
-                por alegría de mi corazón; porque tu nombre se invocó sobre mí, oh 
-                Jehová Dios de los ejércitos".</p>
-			</div>
-		    <input type="checkbox" name="checkbox-v-2c" id="checkbox-v-2c">
-		    <label for="checkbox-v-2c">Practicar las enseñanzas de la Biblia</label>
-
-
-			<div align="right"><a class="btny" href="#apo113"
-                    data-transition="flip" data-rel="popup">(apocalipsis 1:13)</a></div>	
-			<div data-role="popup" id="apo113" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>"y en medio de los siete candeleros, a uno semejante al Hijo
-                del Hombre, vestido de una ropa que llegaba hasta los pies, y
-                ceñido por el pecho con un cinto de oro".</p>
-			</div>
- 		    <input type="checkbox" name="checkbox-v-2d" id="checkbox-v-2d">
-		    <label for="checkbox-v-2d">Tener una Biblia y leerla</label>
- 
-   	</fieldset>
-		</form>		
-            <p align="center">
-		<a id="lec2-rpts-m"  class="ui-btn ui-corner-all ui-shadow ui-icon-eye ui-btn-icon-right ui-btn-icon-notext"></a>
-            </p>
-        </div>
-    </div><!-- /content -->
-
-	<footer data-role="footer" data-position="fixed">
-		<h4>Page Footer</h4>
-	</footer><!-- /footer -->
+  <header data-role="header" data-position="fixed">
+    <h2 class="titulo_leccion"></h2>
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
+    <button onclick="guardar()" class="ui-btn ui-corner-all ui-icon-check ui-btn-icon-right ui-btn-icon-notext">Save</button>
+  </header><!-- /header -->
+    <div class="ui-nodisc-icon ui-alt-icon" align="right">
+      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Check</a>
+      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Check</a>
+      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Check</a>
+    </div>
+  <div role="main" class="ui-content principal">    
+  </div>  
 </div><!-- /page -->
 <!-- /page -->
 
+<!--*********************** Page 3 ***********************-->
 <div data-role="page" id="leccion3"><!--page-lec3-->
-	<header data-role="header" data-position="fixed">
+  <header data-role="header" data-position="fixed">
 		<h2>La oración y la fe </h2>
 		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
 	</header><!-- /header -->
@@ -450,7 +329,7 @@ Y él oirá mi voz.</p>
     </div><!-- /content -->
 
 	<footer data-role="footer" data-position="fixed">
-		<h4>Page Footer</h4>
+		<h4>By-HappySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
 
@@ -582,7 +461,7 @@ Y él oirá mi voz.</p>
     </div><!-- /content -->
 
 	<footer data-role="footer" data-position="fixed">
-		<h4>Origen del pecado</h4>
+		<h4>By-HappySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
 
@@ -711,7 +590,7 @@ Y él oirá mi voz.</p>
     </div><!-- /content -->
 
 	<footer data-role="footer" data-position="fixed">
-		<h4>Origen del pecado</h4>
+		<h4>By-HappySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
 
@@ -838,7 +717,7 @@ Se volvió mi verdor en sequedades de verano.</p>
     </div><!-- /content -->
 
 	<footer data-role="footer" data-position="fixed">
-		<h4></h4>
+		<h4>By-HappySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
 
