--- a/www/index.html
+++ b/www/index.html
@@ -189,10 +189,8 @@
     <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
     <button onclick="guardar()" class="ui-btn ui-corner-all ui-icon-check ui-btn-icon-right ui-btn-icon-notext">Save</button>
   </header><!-- /header -->
-    <div class="ui-nodisc-icon ui-alt-icon" align="right">
-      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Check</a>
-      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Check</a>
-      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Check</a>
+    <div class="ui-nodisc-icon ui-alt-icon" align="right" style="margin-bottom: 0;padding-bottom: 0;">
+      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit</a>
     </div>
   <div role="main" class="ui-content principal">    
   </div>  
