--- a/www/index.html
+++ b/www/index.html
@@ -13,13 +13,13 @@
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
   <!-- <script src="js/index.js"></script> -->
   <script src="js/lafe-json.js"></script>
-	<script src="js/accions.js"></script>
-  <script src="js/app.js"></script>
+	<script src="js/control.js"></script>
+  <!-- <script src="js/app.js"></script> -->
 </head>
 <body>
 
 <!--*********************** Page 0 ***********************-->
-<div data-role="page" class="CoverImage FlexEmbed FlexEmbed--2by0 " id="foo"
+<div data-role="page" class="CoverImage FlexEmbed FlexEmbed--2by0 " id="home"
     style="background-image:url(img/lafedejesus.jpg);">
 	<header data-role="header" data-position="fixed">
     <h1> <strong>La fe de Jesús</strong></h1>
@@ -29,173 +29,87 @@
   <div role="main" class="ui-content">
     <p class="titulo" align="center">La fe de Jesús</p>
     <div data-role="panel" data-position="left" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
-  	  <a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-left">Close</a><br>
-  		<ol data-role="listview" data-inset="true" >
-  			<li><a onclick="listar(1)" href="#leccion1">Dios</a></li>
-        <li><a onclick="listar(2)" href="#leccion2">La Biblia</a></li>
-  			<!-- <li><a href="#leccion2">La Biblia</a></li> -->
-  			<li><a onclick="listar(3)" href="#leccion3">La Oración</a></li>
-  			<li><a href="#leccion4">Origen del pecado</a></li>
-  			<li><a href="#leccion5">La salvación</a></li>
-  			<li><a href="#leccion6">Perdon de los pecados</a></li>
-  			<li><a href="#leccion7">La segunda venida de Jesus</a></li>
-  			<li><a href="#leccion8">Señales de la segunda venida</a></li>
-  			<li><a href="#leccion9">La santa ley de Dios</a></li>
-  			<li><a href="#leccion10">El dia de reposo</a></li>
-  			<li><a href="#leccion11">Como guardar el sábado</a></li>
-  			<li><a href="#leccion12">Plan de Dios para la iglesia</a></li>
-  			<li><a href="#leccion13">El bautizmo</a></li>
-  			<li><a href="#leccion14">La muerte</a></li>
-  			<li><a href="#leccion15">El juicio</a></li>
-  			<li><a href="#leccion16">La iglesia</a></li>
-        <li><a href="#leccion17">Don de profecía</a></li>
-  			<li><a href="#leccion18">Normas Cristianas</a></li>
-  			<li><a href="#leccion19">La vida Cristiana</a></li>
-  			<li><a href="#leccion20">Dios nos llama</a></li>
-  		</ol>
+  		<ul data-role="listview">
+          <li><a href="#leccion" data-transition="flip" onclick="listar(1)">Dios</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(2)">La santa biblia</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(3)">Oración y fe</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(4)">Segunda venida de Jesus</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(5)">Señales de la venida de Jesus</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(6)">Origen del pecado</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(7)">La salvación</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(8)">El perdón de pecados</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(9)">El bautismo</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(10)">El juicio</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(11)">La santa ley de Dios</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(12)">El día de descanso</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(13)">Guardar el Sábado</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(14)">La muerte</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(15)">La Iglesia</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(16)">El don de profecía</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(17)">Las normas cristianas</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(18)">El plan de Dios para la iglesia</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(19)">La vida cristiana</a></li>
+          <li><a href="#leccion" data-transition="flip" onclick="listar(20)">El llamado de DIOS</a></li>
+          <li data-icon="back"><a href="#" data-rel="close">Back</a></li>
+        </ul>
       <br>
     </div><!-- /panel -->
     <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="" id="add-form">
-    	<a href="#" data-rel="close" class="ui-btn ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a><br><br>
-      <ul data-role="" data-inset="true">
-        <li><a href="#panel-fixed-page2">Accordion</a></li>
-        <li><a href="#panel-fixed-page2">Accordion</a></li>
-      </ul>
+      <a onclick="cargar_datos()" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-icon-arrow-u ui-btn-icon-right">Reset data</a>
     </div><!-- /panel -->
   </div><!-- /content -->
 	<footer data-role="footer" data-position="fixed">
-		<h4>By-HappySoft</h4>
+		<h4>By-MySoft</h4>
 	</footer><!-- /footer -->
 </div><!-- /page -->
 <!--*********************** Page 1 ***********************-->
 
-<div data-role="page" id="leccion1">
+<div data-role="page" id="leccion">
   <header data-role="header" data-position="fixed">
-    <h1><strong>DIOS<small>, y la Biblia </small></strong></h1>
-		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
-    <button onclick="guardar()" class="ui-btn ui-corner-all ui-icon-check ui-btn-icon-right ui-btn-icon-notext">Save</button>
-  </header><!-- /header -->
-
-	<div role="main" class="ui-content">
-		<ol>
-      <li><strong>¿Cuántos dioses existen?</strong><a href="#" class="lec1-vers-m"><span >(Efesios 4:6)</span></a> </li>
-			<div class="lec1-vers">				
-                <a href="#">(Efesios 4:6)</a>
-			<p> "Un Dios y Padre de todos, el cual es sobre todos, y por todos, y en todos".</p>
-			</div>
-			<p><input type="text" class="lec1-inputs"></p>
-            <p class="lec1-rpts info">
-			<strong>Respuesta: </strong>Un solo Dios.</p>
-
-			<li><strong>¿Cuál es la naturaleza de Dios?</strong> <a href="#">(S. Juan 4:24)</a> </li>
-			<p class="lec1-vers"> "Dios es Espíritu; y los que le adoran, en
-                espíritu y en verdad es necesario que adoren". </p>
-			<p><input type="text" class="lec1-inputs"></p>
-			<p class="lec1-rpts info"><strong>Respuesta:</strong> Dios es espíritu</p>
-
-            <li><strong>¿Cueles son las tres personas de la trinidad?</strong> 
-                <a href="#" >(Mateo 28:19)</a></li>
-			<p class="lec1-vers"> "Por tanto, id, y haced discípulos a todas las
-                naciones, bautizándolos en el nombre del Padre, y del Hijo, y del Espíritu Santo" </p>
-			<p><input type="text" class="lec1-inputs"></p>
-			<p class="lec1-rpts info"><strong>Respuesta:</strong> Padre, hijo, y
-                el espíritu santo.</p>
-
-            <li><strong>¿Cómo se consideraba Dios hacia el hombre?</strong>
-                <a href="#" >(1 juan 3:1,2)</a></li>
-            <div class="lec1-vers">
-			<p>1 Mirad cuál amor nos ha dado el Padre, para que seamos llamados hijos de Dios; por esto el mundo no nos conoce, porque no le conoció a él. </p>
-            <p>2 Amados, ahora somos hijos de Dios, y aún no se ha manifestado lo que hemos de ser; pero sabemos que cuando él se manifieste, seremos semejantes a él, porque le veremos tal como él es.</p>
-            </div>
-			<p><input type="text" class="lec1-inputs"></p>
-			<p class="lec1-rpts info"><strong>Respuesta:</strong> Como un padre.</p>
-
-            <li><strong>¿Se preocupa Dios por nuestros problemas?</strong>
-                <a href="#">(salmo 40:1-3)</a></li>
-            <div class="lec1-vers">
-			<p>"Pacientemente esperé a Jehová, y se inclinó a mí, y oyó mi clamor."</p>
-			<p>"Y me hizo sacar del pozo de la desesperación, del lodo cenagoso; Puso mis pies sobre peña, y enderezó mis pasos."</p>
-			<p>"Puso luego en mi boca cántico nuevo, alabanza a nuestro Dios. Verán esto muchos, y temerán, Y confiarán en Jehová."</p>
-            </div>
-			<p><input type="text" class="lec1-inputs"></p>
-			<p class="lec1-rpts info"><strong>Respuesta:</strong> Si se preocupa.</p>
-
-            <li><strong>¿Cómo es el carácter de Dios?</strong>
-                <a href="#">(1 juan 4:8)</a></li>
-			<p class="lec1-vers"> "El que no ama, no ha conocido a Dios; porque
-                Dios es amor".</p>
-			<p><input type="text" class="lec1-inputs"></p>
-			<p class="lec1-rpts info"><strong>Respuesta:</strong> Es amor.</p>
-		</ol>
-
-        <h4 align="center">
-            ¿QUÉ DEBO HACER?
-            <p align="center">
-		<a id="lec1-comp-m"  class="ui-btn ui-corner-all ui-shadow ui-icon-mail ui-btn-icon-right ui-btn-icon-notext"></a>
-            </p>
-        </h4>
-        <div id="lec1-comp">
-		<form>
-		<fieldset data-role="controlgroup" data-mini="true">	
-			<div align="right"><a class="btny"  href="#popup1" data-transition="flip" data-rel="popup">(Exodo 20:7)</a></div>					
-			<div data-role="popup" id="popup1" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>"No tomaras el nombre del Señor tu Dios en vano. Porque el Señor no dara por inocente al que tome su nombre en vano".</p>
-			</div>
-		    <input type="checkbox" name="checkbox-v-1a" id="checkbox-v-1a">
-		    <label for="checkbox-v-1a">Respetar el nombre de Dios </label>			
-
-			<div align="right"><a class="btny"  href="#popup2" data-transition="flip" data-rel="popup">(Hechos 5:29)</a></div>	
-			<div data-role="popup" id="popup2" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>Pedro y los apostoles respondieron: "Es preciso obedecer a Dios antes que a los hombres".</p>
-			</div>
-		    <input type="checkbox" name="checkbox-v-1b" id="checkbox-v-1b">
-		    <label for="checkbox-v-1b">Obedecer a Dios </label>
-
-			<div align="right"><a class="btny" href="#popup3" data-transition="flip" data-rel="popup">(S. Juan 6:33)</a></div>	
-			<div data-role="popup" id="popup3" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>"Porque el pan de Dios es aquel que deciende del cielo y da vida al mundo".</p>
-			</div>
-		    <input type="checkbox" name="checkbox-v-1c" id="checkbox-v-1c">
-		    <label for="checkbox-v-1c">Poner a Dios en primer lugar</label>
-
-			<div align="right"><a class="btny" href="#popup4"
-                    data-transition="flip" data-rel="popup">(S. Mateo 22:37)</a></div>	
-			<div data-role="popup" id="popup4" class="ui-content" style="max-width:280px">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-			<p>Jesús respondio: "Amaras al Señor tu Dios con todo tu corazón, con toda tu alma y con toda tu mente".</p>
-			</div>
- 		    <input type="checkbox" name="checkbox-v-1d" id="checkbox-v-1d">
-		    <label for="checkbox-v-1d">Amar a Dios de todo corazón</label>
- 
-   	</fieldset>
-		</form>		
-            <p align="center">
-		<a id="lec1-rpts-m"  class="ui-btn ui-corner-all ui-shadow ui-icon-eye ui-btn-icon-right ui-btn-icon-notext"></a>
-            </p>
-        </div>
-    </div><!-- /content -->
-	<footer data-role="footer" data-position="fixed">
-		<h4>By-HappySoft</h4>
-	</footer><!-- /footer -->
+    <h2 class="titulo_leccion"></h2>
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left ui-btn-icon-notext">Home</a>
+    <a href="#" onclick="guardar()" class="ui-btn ui-corner-all ui-shadow ui-icon-check ui-btn-icon-left ui-btn-icon-notext"></a>
+  </header>
+  <div role="main" class="ui-content principal">    
+  </div>  
+  <div data-role="footer" data-position="fixed">
+    <div data-role="navbar">
+        <ul>
+            <li><a href="#" onclick="ingresar_respuestas()" data-icon="edit"></a></li>
+            <li><a href="#popupMenu" data-rel="popup" data-transition="slideup" data-icon="grid"></a></li>
+            <li><a href="#" onclick="guardar()" data-icon="check"></a></li>
+        </ul>
+      <div data-role="popup" id="popupMenu">
+        <ul data-role="listview" data-inset="true" style="min-width:210px;">
+            <li><a href="#">a</a></li>
+            <li><a href="#">b</a></li>
+            <li><a href="#">c</a></li>
+            <li><a href="#">d</a></li>
+        </ul>
+      </div>
+    </div><!-- /navbar -->
+  </div><!-- /footer -->
 </div><!-- /page -->
 
 <!--*********************** Page 2 ***********************-->
 <div data-role="page" id="leccion2"><!--page-lec2-->
   <header data-role="header" data-position="fixed">
     <h2 class="titulo_leccion"></h2>
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left ui-btn-icon-notext">Back</a>
     <button onclick="guardar()" class="ui-btn ui-corner-all ui-icon-check ui-btn-icon-right ui-btn-icon-notext">Save</button>
-  </header><!-- /header -->
-    <div class="ui-nodisc-icon ui-alt-icon" align="right" style="margin-bottom: 0;padding-bottom: 0;">
-      <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit</a>
-    </div>
+  </header>
   <div role="main" class="ui-content principal">    
   </div>  
+  <div data-role="footer" data-position="fixed">
+    <div data-role="navbar">
+        <ul>
+            <li><a href="#" data-icon="edit" data-theme="a"></a></li>
+            <li><a href="#" data-icon="grid" data-theme="b"></a></li>
+            <li><a href="#" data-icon="star" data-theme="a"></a></li>
+        </ul>
+    </div><!-- /navbar -->
+  </div><!-- /footer -->
 </div><!-- /page -->
-<!-- /page -->
 
 <!--*********************** Page 3 ***********************-->
 <div data-role="page" id="leccion3"><!--page-lec3-->
