--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,7 @@
     <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="" id="add-form">
       <p align="center">Los versículos contenidos en esta aplicación están basados en la versión Reina-Valera 1995</p>
       <a onclick="cargar_datos()" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-icon-arrow-u ui-btn-icon-right">Reset data</a>
+      <p align="center">Cualquier error,observación o sugeriencia por favor escribeme a: goodealdo@gmail.com</p>
     </div><!-- /panel -->
   </div><!-- /content -->
 	<footer data-role="footer" data-position="fixed">
